[fdb-panel]: Launch video solution - if video button solution is enabled

--- a/app/views/students/_rc.html.haml
+++ b/app/views/students/_rc.html.haml
@@ -13,4 +13,4 @@
         = simple_button for: 'Read Solution', 
           id: 'btn-show-solution', toggle: :button
         = simple_button for: 'View Solution', icon: 'icon-facetime-video', 
-          id: 'btn-video-solution'
+          id: 'btn-video-solution', class: 'video btn-inverse'
