Added menu for pending videos so that the JPEG of the first page can be downloaded ...
The question text can be extracted from the JPEG and overlaid onto the video.

--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -13,6 +13,7 @@
     = render partial: 'menus/user/notifications'
     = render partial: 'examiners/annotation-marks'
     = render partial: 'menus/examiner/blockdb'
+    = render partial: 'menus/examiner/per-pending-video'
   
 - content_for :modals do
   #modals
