--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -1276,12 +1276,31 @@ li.split {
 } 
 
 #m-ws-options {
+  button {
+    margin-top: 7px ;
+  }
+
   #as-homework, #as-takehome, #as-classwork {
-    padding: 5px 10px ;
+    padding: { 
+      top: 10px ; 
+    } 
     border-radius: 5px ;
+    img { 
+      padding: 3px ;
+    } 
     &:hover {
       cursor: pointer ;
       background-color: $panel-colour ;
+    }
+    &.selected {
+      img { 
+        border: {
+          radius: 4px ;
+          color: $deep-blue ;
+          style: solid ;
+          width: 2px ;
+        }
+      }
     }
   } 
 
