--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -22,6 +22,8 @@
     = render partial: 'modals/examiner/upload-video-solution'
     = render partial: 'notifications/shared/last-scan'
     = render partial: 'notifications/shared/first-scan'
+    - if is_admin
+      = render partial: 'modals/examiner/new-examiner'
 
 !!!5
 
