--- a/app/views/menus/examiner/_workbench.html.haml
+++ b/app/views/menus/examiner/_workbench.html.haml
@@ -25,4 +25,6 @@
   - if is_admin
     %li
       = simple_link for: "Add Topics", id: 'lnk-mng-topics', icon: 'icon-plus-sign'
+    %li
+      = simple_link for: "Add Examiner", id: 'lnk-add-examiner', icon: 'icon-plus-sign'
 
