Modal styling changes

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -291,6 +291,10 @@ img {
     &.in {
       &.super-wide { left: 40% ; }
       &.wide { left: 50% ; }
+      border: {
+        bottom-left-radius: 26px ;
+        bottom-right-radius: 26px ;
+      }
     }
   } 
 
