--- a/app/views/toolbox/_line.html.haml
+++ b/app/views/toolbox/_line.html.haml
@@ -6,7 +6,7 @@
 -# is clicked on
 
 -# A single line entry - with mandatory text and optional subtext 
-.row-fluid.single-line.leaf
+.row-fluid.line.leaf
   .dropdown
     %a.dropdown-toggle{ :href => '#', :data => { :toggle => :dropdown } } 
       %span.caret
