handled return message for new group/sektion

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -52,6 +52,7 @@
     = render partial: 'notifications/teacher/queued'
     = render partial: 'notifications/teacher/compiled'
     = render partial: 'notifications/teacher/edit-quiz'
+    = render partial: 'notifications/teacher/enrolled'
     = render partial: 'notifications/shared/last-scan'
     = render partial: 'notifications/shared/first-scan'
     = render partial: 'notifications/shared/question-received'
