Student registration - moved to outside the site - registration now results in student *claiming* their account which was already created

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,11 +2,17 @@
 - server = "#{Gutenberg['server']}"
 -content_for :toolbox do
   #toolbox.hidden 
+    = render :partial => 'toolbox/line'
     = render :partial => 'menus/user/abouts'
     = render :partial => 'menus/teacher/howto'
   #modals
     = render :partial => 'modals/user/register'
+    = render :partial => 'modals/user/enrollment-confirm'
     = render :partial => 'notifications/shared/old-browser'
+  #notifications
+    = render :partial => 'notifications/student/enrollment-blocked'
+    = render :partial => 'notifications/student/enrolled-already'
+    = render :partial => 'notifications/student/sektion-not-found'
 
 !!!5
 
