--- a/app/views/notifications/student/_enrollment-blocked.html.haml
+++ b/app/views/notifications/student/_enrollment-blocked.html.haml
@@ -5,7 +5,7 @@
   .span8
     %p.title.underline= "Unable to enroll"
     %p
-      The name you registered with does not match any of the names 
+      The name you tried with does not match any of the names 
       your instructor added 
     %p
       Please confirm that you entered the correct group code and re-try
