--- a/app/views/modals/user/_register.html.haml
+++ b/app/views/modals/user/_register.html.haml
@@ -2,7 +2,6 @@
 - teacher = Teacher.new 
 - teacher_account = teacher.build_account
 - student = Student.new 
-- student_account = student.build_account
 
 #m-register.modal.fade.slim
   %ul.nav.nav-tabs.always-on
@@ -25,12 +24,9 @@
 
     -# Student Registration Form
     #pane-register-2.tab-pane.push-down
-      = simple_form_for student, :url => register_student_path, :validate => true,
+      = simple_form_for student, :url => match_student_path, :remote => true, :validate => true,
       :defaults => { :required => false }, :html => { :id => 'fm-register-student' } do |f|
         = f.input :name
-        = f.simple_fields_for student_account, :validate => true do |m|
-          = m.input :email
-          = m.input :password
-        -#= f.input :code, :hint => "Your teacher must have given you a code for the course. Enter that here"
-        %input.hide{ :type => :string, :data => { :validate => false }, :name => 'teacher[guard]' } 
-        %button.btn.btn-large.btn-primary.push-down.pull-right{:type => :submit}= "Register"
+        = f.input :code, :hint => "Your Teacher would have provided you this"
+        %button.btn.btn-large.btn-primary.push-down.pull-right{:type => :submit}= "Check Name"
+
