--- a/app/views/examiners/_audit.html.haml
+++ b/app/views/examiners/_audit.html.haml
@@ -1,12 +1,12 @@
 
 %ul.nav.nav-tabs.always-on
   %li
-    = simple_link :for => "Review", :id => 'tab-audit-review', :href => '#pane-audit-review'
+    = simple_link :for => "To Do", :id => 'tab-audit-todo', :href => '#pane-audit-todo'
   %li
-    = simple_link :for => "Close these", :id => 'tab-audit-close', :href => '#pane-audit-close'
+    = simple_link :for => "Review", :id => 'tab-audit-review', :href => '#pane-audit-review'
 
 .tab-content
-  #pane-audit-review.tab-pane
+  #pane-audit-todo.tab-pane
     .row-fluid.no-remove
       = simple_link :for => "Audit", :class => 'btn btn-inverse pull-right', :id => 'lnk-audit-form'
-  #pane-audit-close.tab-pane
+  #pane-audit-review.tab-pane
