--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -14,6 +14,7 @@
     = render partial: 'examiners/annotation-marks'
     = render partial: 'menus/examiner/blockdb'
     = render partial: 'menus/examiner/per-pending-video'
+    = render partial: 'menus/examiner/per-audit'
   
 - content_for :modals do
   #modals
