--- a/app/views/menus/examiner/_per-audit.html.haml
+++ b/app/views/menus/examiner/_per-audit.html.haml
@@ -1,4 +1,4 @@
 
 %ul.dropdown-menu.dropdown-inverse.slim{ id: 'm-audit', role: :menu }
   %li
-    = simple_link for: 'Close', id: 'lnk-audit-done', remote: true
+    = simple_link for: 'Close', id: 'lnk-audit-close', remote: true
