[quiz-sharing]: Added a sanity check for when an already shared quiz is shared again

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -63,6 +63,7 @@
       = render partial: 'notifications/teacher/share-missing-teacher'
       = render partial: 'notifications/teacher/share-error'
       = render partial: 'notifications/teacher/share-success'
+      = render partial: 'notifications/teacher/share-already'
 
 -unless tc.online
   - content_for :tutorials do 
