--- a/app/views/modals/user/_register.html.haml
+++ b/app/views/modals/user/_register.html.haml
@@ -3,16 +3,18 @@
 - teacher_account = teacher.build_account
 - student = Student.new 
 
-#m-register.modal.fade.slim
-  %ul.nav.nav-tabs.always-on
-    %li
-      = simple_link :for => "Teacher", :id => 'tab-register-1', :href => '#pane-register-1'
-    %li
-      = simple_link :for => "Student", :id => 'tab-register-2', :href => '#pane-register-2'
-  .tab-content.pull-left
+#m-register.modal.regular.fade.row-fluid
+  .span2
+    = image_tag 'notifications/add-user.png', :class => 'big-icon offset1'
+  .span8
+    #who-are-you.row-fluid
+      %p.title= "Hi! Welcome. You are a ... "
+      = simple_link :for => "Student", :id => 'btn-register-student', :class => 'btn btn-info btn-large pull-left'
+      = simple_link :for => "Teacher", :id => 'btn-register-teacher', :class => 'btn btn-primary btn-large pull-right'
 
     -# Teacher Registration Form
-    #pane-register-1.tab-pane.push-down
+    #pane-register-1.hide
+      %p.title= "Teacher Registration"
       = simple_form_for teacher, :url => register_teacher_path, :validate => true,
       :html => { :id => 'fm-register-teacher' }, :defaults => { :required => false } do |f|
         = f.input :name
@@ -23,10 +25,11 @@
         %button.btn.btn-large.btn-primary.push-down.pull-right{:type => :submit}= "Register"
 
     -# Student Registration Form
-    #pane-register-2.tab-pane.push-down
-      = simple_form_for student, :url => match_student_path, :remote => true, :validate => true,
+    #pane-register-2.hide
+      %p.title= "Student Registration"
+      = simple_form_for student, :url => match_student_path, :validate => true, :remote => true, 
       :defaults => { :required => false }, :html => { :id => 'fm-register-student' } do |f|
         = f.input :name
         = f.input :code, :hint => "Your Teacher would have provided you this"
+        %input.hide{ :type => :string, :data => { :validate => false }, :name => 'teacher[guard]' } 
         %button.btn.btn-large.btn-primary.push-down.pull-right{:type => :submit}= "Check Name"
-
