--- a/app/views/shared/grading/_pending.html.haml
+++ b/app/views/shared/grading/_pending.html.haml
@@ -12,4 +12,4 @@
   #pane-grd-ws.tab-pane
   #pane-grd-page.tab-pane
   #pane-grd-panel.tab-pane.static
-    = render :partial => 'toolbox/grd-abacus'
+    = render partial: 'shared/grading/rubric'
