--- a/app/views/shared/grading/_controls.html.haml
+++ b/app/views/shared/grading/_controls.html.haml
@@ -4,12 +4,13 @@
 .hide{ id: 'pending-scans' }
 
 .row-fluid{ id: 'grd-comment' }
-  %input.span4{ id: 'grd-typeahead', type: :text, placeholder: 'Write comment - then click on scan' }
-  .row-fluid{ id: 'grd-ticker', class: 'span4'}
+  .span4{ id: 'grd-ticker' }
     .span2.offset1
       #curr-q
     .span8
       #curr-s
+  .span5
+    %input{ id: 'grd-typeahead', type: :text, placeholder: 'Write comment - then click on scan' }
 
 .row-fluid
   .span1{ id: 'grd-controls' }
