[grading]: minor styling changes

--- a/app/views/shared/grading/_controls.html.haml
+++ b/app/views/shared/grading/_controls.html.haml
@@ -7,7 +7,7 @@
   .span4{ id: 'grd-ticker' }
     .span2.offset1
       #curr-q
-    .span8
+    .span7.offset1
       #curr-s
   .span5
     %input{ id: 'grd-typeahead', type: :text, placeholder: 'Write comment - then click on scan' }
