--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -680,7 +680,6 @@ button[data-toggle='button'] {
     top: 7px ;
     bottom: 0px ;
   } 
-  font-size: 14px ;
   &.graded {
     border: none ;
     background-color: rgba(0,129,194,0.7) ;
@@ -688,10 +687,12 @@ button[data-toggle='button'] {
   }
   border: {
     top-left-radius: 10px ;
-    bottom-left-radius: 10px ;
-    style: solid ;
-    width: 1px ;
-    color: $deep-blue ;
+    top-right-radius: 10px ;
+  }
+  background: rgba(43,43,43,0.4) ; 
+  font: {
+    size: 12px ;
+    weight: normal ;
   }
 }
 
