[grading]: Displaying keyboard shortcuts for each button in the grading panel
Not being processed though, yet

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -34,6 +34,15 @@ img {
   padding-top: 4px ;
 }
 
+.kb-shortcut {
+  padding: 1px 4px ;
+  border-radius: 5px ;
+  background: $orange ;
+  margin-right: 5% ;
+  color: $panel-colour ;
+  float: left ;
+}
+
 .underline {
   border-bottom: 1px solid $deep-blue ;
 }
