[grading]: Keyboard behaviour during grading defined
Comment box now does *not* get focus back automatically.

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -37,7 +37,7 @@ img {
 .kb-shortcut {
   padding: 1px 4px ;
   border-radius: 5px ;
-  background: $orange ;
+  background: rgba(255,255,255,0.7) ; 
   margin-right: 5% ;
   color: $panel-colour ;
   float: left ;
