--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -19,6 +19,7 @@
 - content_for :modals do
   #modals
     = render partial: 'modals/user/account'
+    = render partial: 'modals/examiner/edit'
     = render partial: 'modals/examiner/audit'
     = render partial: 'modals/examiner/upload-video-solution'
     = render partial: 'notifications/shared/last-scan'
