[Big one]: Replaced canvas based grading with overlay-based one

--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -7,7 +7,6 @@
 - content_for :toolbox do 
   #toolbox.hidden 
     = render partial: 'toolbox/line'
-    = render partial: 'toolbox/preview'
     = render partial: 'menus/user/account'
     = render partial: 'menus/examiner/workbench', locals: { is_admin: is_admin } 
     = render partial: 'menus/user/notifications'
@@ -92,11 +91,11 @@
             #wide-2
               = render partial: 'admin/accounts-in-country'
           #wide-X
+            = render partial: 'shared/user/preview'
+            = render partial: 'shared/grading/controls'
           #wide-wait
             = render partial: 'toolbox/wait'
           #graph-paper
-          #wide-grd-canvas
-            = render partial: 'shared/grading/controls'
 
     = yield :toolbox
     = yield :modals
