--- a/app/views/shared/user/_preview.html.haml
+++ b/app/views/shared/user/_preview.html.haml
@@ -1,5 +1,5 @@
 
-#wp-preview.carousel.slide
+#preview-carousel.carousel.slide.hide
   .carousel-inner
   %a.carousel-control.left{ :href => "#", 'data-slide' => :prev }
     \&lsaquo;
