--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -6,7 +6,6 @@
 - content_for :toolbox do 
   #toolbox.hidden 
     = render :partial => 'toolbox/line'
-    = render :partial => 'toolbox/preview'
     = render :partial => 'toolbox/fdb-panel'
     = render :partial => 'menus/user/account'
     = render :partial => 'menus/student/inbox'
@@ -28,6 +27,22 @@
   %head 
     = javascript_include_tag "application", "students"
     %script{ type: 'text/javascript', src: '//cdn.sublimevideo.net/js/2fya70le.js' }
+    %script{ :type => "text/x-mathjax-config" } 
+      MathJax.Hub.Config({
+      "HTML-CSS" : {
+      mtextFontInherit : true
+      },
+      styles : {
+      ".mrow > .mtext" : {
+      "font-family" : "Ubuntu 'Trebuchet MS' sans-serif",
+      "font-weight" : 300,
+      "font-size" : "100%"
+      },
+      ".mo, .mn" : {
+      "font-size" : "70%" 
+      }
+      }
+      });
     = stylesheet_link_tag "application" 
     = csrf_meta_tag
 
@@ -64,6 +79,7 @@
           #middle-1
         #wide.g-panel.span8
           #wide-X
+            = render partial: 'shared/user/preview'
           #wide-wait
             = render :partial => 'toolbox/wait'
 
