--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -43,6 +43,7 @@
       }
       }
       });
+    = javascript_include_tag "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"
     = stylesheet_link_tag "application" 
     = csrf_meta_tag
 
