[Big one]: Grading panel is now question-aware and page-agnostic
Which means, the grader now iterates over all instances of a given question
than over all instances of a page

The switch to a question-centered way of working has implications
for how work is distributed and how worksheets are laid out

Also, introducing shadow in the grading panel to reduce chances
of grader error

--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -15,6 +15,7 @@
     = render partial: 'menus/examiner/per-pending-video'
     = render partial: 'menus/examiner/per-audit'
     = render partial: 'shared/user/preview'
+    = render partial: 'shared/grading/shadow'
   
 - content_for :modals do
   #modals
