--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -22,6 +22,7 @@
     = render partial: 'menus/user/notifications'
     = render partial: 'toolbox/fdb-panel'
     = render partial: 'shared/user/preview'
+    = render partial: 'shared/grading/shadow'
     - if tc.online
       = render partial: 'menus/teacher/courses'
 
