--- a/app/views/shared/grading/_pending.html.haml
+++ b/app/views/shared/grading/_pending.html.haml
@@ -3,13 +3,12 @@
   %li
     = simple_link :for => "Worksheets", :id => 'tab-grd-ws', :href => "#pane-grd-ws"
   %li
-    = simple_link :for => "Pages", :id => 'tab-grd-page', :href => "#pane-grd-page"
+    = simple_link for: "Questions", id: 'tab-grd-questions', href: '#pane-grd-questions'
   %li
-    = simple_link :for => "Grade", :id => 'tab-grd-panel', 
-      :href => "#pane-grd-panel", :class => 'nopurge-ever'
+    = simple_link for: 'Grade', id: 'tab-grd-panel', href: '#pane-grd-panel', class: 'nopurge-ever'
 
 .tab-content
   #pane-grd-ws.tab-pane
-  #pane-grd-page.tab-pane
+  #pane-grd-questions.tab-pane
   #pane-grd-panel.tab-pane.static
     = render partial: 'shared/grading/rubric'
